# social_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: Group.msg  GroupArray.msg  Locals.msg  Object.msg  Objects.msg  Person.msg
srv/: DestinationArray.srv
